Fix timeline segment position calculation

Bug: 812531
Change-Id: I0a9d54b28ef7e17d94358a692f7a2259130210a1
Reviewed-on: https://chromium-review.googlesource.com/920991
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537297}