third_party/WebKit/Source/modules/media_controls/elements/MediaControlTimelineElement.cpp
@@ -274,7 +274,7 @@ void MediaControlTimelineElement::RenderBarSegments() {
       // Draw highlight to show what we have played.
       if (current_position > start_position) {
         SetAfterSegmentPosition(MediaControlSliderElement::Position(
-            start_position, current_position));
+            start_position, current_position - start_position));
       }
 
       // Draw dark grey highlight to show what we have loaded.
